Core Java + Vert.x microservice communication now fully working, added example microservice for demonstration on how to make/structure a microservice in the Service Wrapper framework. Still need to add RabbitMQ.